PYIC-6973: Refactor fraud VC fixtures and fix tests